--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-.hdf5 filter=lfs diff=lfs merge=lfs -text
-.mps.gz filter=lfs diff=lfs merge=lfs -text
+*.mps.gz filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
+*.hdf5 filter=lfs diff=lfs merge=lfs -text
